--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pale Circus</title>
   
-  <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <style>
     :root {
-        --color-1: #5f3372; /* Dominant purple color */
-        --color-2: rgb(31.716% 97.014% 40.303%); /* Keep your bright accent color */
+        --color-1: #5f3372; 
+        --color-2: rgb(31.716% 97.014% 40.303%); 
     }
 
 
@@ -324,6 +323,43 @@
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0,0,0,0.4);
 }
+#music {
+  padding: 60px 20px;
+  max-width: 1400px;
+  min-width: fit-content;
+  margin: auto;
+  text-align: center;
+}
+
+.music-video-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  gap: 30px;
+  margin-top: 40px;
+}
+
+.video-box, .spotify-box {
+  flex: 1 1 600px;
+  max-width: 700px;
+  position: relative;
+}
+
+.video-box iframe, .spotify-box iframe {
+  width: 100%;
+  height: 400px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+  border: none;
+}
+
+/* Mobile responsive tweak */
+@media (max-width: 768px) {
+  .video-box iframe, .spotify-box iframe {
+    height: 300px;
+  }
+}
 
 
 
@@ -385,17 +421,33 @@
   
   
 
-<section id="music" class="fade-in">
-  <h2>MUSIC</h2>
-  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/35rZrtAiZmbRvIBnXZbucA?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cPpMal7K9i0?si=Nu6lKCQK_7H5Ddsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</section>
+  <section id="music" class="fade-in">
+    <h2>Music & Video</h2>
+    <div class="music-video-container">
+      <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/cPpMal7K9i0?si=Nu6lKCQK_7H5Ddsk" 
+          title="Pale Circus Music Video" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
+      </div>
+      <div class="spotify-box">
+        <iframe src="https://open.spotify.com/embed/artist/2VZn4Fr7of0vc3rLkJKgTB?utm_source=generator" 
+          title="Pale Circus Spotify" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy">
+        </iframe>
+      </div>
+    </div>
+  </section>
+  
   
 <section id="contact" class="fade-in">
   <h2>CONTACT</h2>
   <p>
     Booking, press or just to say hi:<br>
-    <a href="mailto:contact@palecircus.com" style="color: var(--color-2); text-decoration: underline;">hi@palecircus.com</a>
+    <a href="mailto:contact@palecircus.com" style="color: var(--color-2); text-decoration: none; font-size: 30px;">hi@palecircus.com</a>
   </p>
 </section>
 <div class="social-icons">
