--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       overflow-x: hidden;
       position: relative;
     }
+    html {
+      scroll-behavior: smooth;
+    }
 
     body::before {
       content: "";
@@ -76,7 +79,7 @@
       z-index: 100;
     }
     header h1 {
-      font-size: 24px;
+      font-size: 30px;
       margin: 0;
       letter-spacing: 2px;
       color: var(--color-2);
@@ -413,9 +416,9 @@
 
 <section id="gallery" class="fade-in">
     <div class="gallery-container">
-      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-1.jfif" alt="Band Live">
-      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-2.jfif" alt="Studio Session">
-      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-3.jfif" alt="Dreamy Moment">
+      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-1.jfif" alt="">
+      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-2.jfif" alt="">
+      <img src="https://palecircus.github.io/pc/assets/band-pics/pale-circus-band-pic-3.jfif" alt="">
     </div>
   </section>
   
