--- a/index.html
+++ b/index.html
@@ -356,6 +356,15 @@
   box-shadow: 0 4px 20px rgba(0,0,0,0.4);
   border: none;
 }
+.spotify-box iframe {
+  width: 100%;
+  min-height: 180px;
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+  border: none;
+}
+
 
 /* Mobile responsive tweak */
 @media (max-width: 768px) {
