--- a/index.html
+++ b/index.html
@@ -444,6 +444,15 @@
 
 <!-- About Section -->
 <section id="about" class="about-section fade-in">
+  <div class="social-icons">
+    <a href="https://twitter.com/palecircusmusic" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/palecircusmusic" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/@palecircus" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+    <a href="https://music.apple.com/tr/artist/pale-circus/1649818072" target="_blank" aria-label="Apple Music"><i class="fab fa-apple"></i></a>
+    <a href="https://www.deezer.com/us/artist/186542067" target="_blank" aria-label="Deezer"><i class="fab fa-deezer"></i></a>
+    <a href="https://tidal.com/artist/34977711" target="_blank" aria-label="Tidal"><i class="fas fa-music"></i></a>
+    <a href="https://open.spotify.com/artist/2VZn4Fr7of0vc3rLkJKgTB" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
+  </div><br>
   <h2>ABOUT</h2>
   <p>
     Named after its lyrical concept and feeling, Pale Circus is an alternative music band that thrives unique sounds. After Ege spent a lot of time on different genres and finding new sonics and sounds at the beginning of 2020, Ege finally started to write the debut album.
@@ -482,7 +491,7 @@
     </div>
   </div>
 </section>
-<hr><br>
+
 <!-- Contact Section -->
 <section id="contact" class="contact-section fade-in">
     <!-- Social Icons -->
@@ -545,6 +554,8 @@
 
 </body>
 </html>
+
+
 
 <!--                                   _                           _                _                                                                         
      | |                              | |                 | |     | |              | |                    | | | |                                
